getMyStudents method in TeacherService fixed